--- a/src/pages/OrdersManage/OrdersManage.css
+++ b/src/pages/OrdersManage/OrdersManage.css
@@ -3,6 +3,6 @@
     background-image: url('https://cdn2.wanderlust.co.uk/media/1005/shutterstock_552879889.jpg?anchor=center&mode=crop&width=1920&height=858&format=auto&rnd=132705573330000000');
     background-attachment: cover;
     
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 
 }
